--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 
 dependencies {
     compile "org.springframework:spring-context:${springVersion}"
+    compile 'javax.inject:javax.inject:1'
 
     testCompile "org.springframework:spring-test:${springVersion}"
     testCompile "junit:junit:4.12"
