--- a/build.gradle
+++ b/build.gradle
@@ -19,5 +19,7 @@ dependencies {
 
     testCompile "org.springframework:spring-test:${springVersion}"
     testCompile "junit:junit:4.12"
-    testCompile "org.mockito:mockito:2.13"
+    testCompile "org.mockito:mockito-core:2.19.0"
+    testCompile "org.hamcrest:hamcrest-junit:2.0.0.0"
+    testCompile "org.assertj:assertj-core:3.10.0"
 }
