--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ repositories {
 dependencies {
     compile "org.springframework:spring-core:${springVersion}"
     compile "org.springframework:spring-context:${springVersion}"
+    compile "org.springframework:spring-aop:${springVersion}"
+    compile "org.aspectj:aspectjweaver:1.8.13"
 
     testCompile "org.springframework:spring-test:${springVersion}"
     testCompile "junit:junit:4.12"
